fix horizontal overflow for break-out containers

--- a/content/.vuepress/theme/styles/main.styl
+++ b/content/.vuepress/theme/styles/main.styl
@@ -45,6 +45,7 @@ body
     -moz-osx-font-smoothing grayscale
     font-size 16px
     color $textColor
+    overflow-x hidden
 
 .container
     margin 0 auto
